--- a/spring web MVC 2/spring-front/index.html
+++ b/spring web MVC 2/spring-front/index.html
@@ -11,9 +11,17 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 </head>
 <body style="padding: 40px;">
+
+                <select onchange="onChangeLang()">            
+                       <option value="az">Az</option>
+                       <option value="tr">Tr</option>
+                       <option value="ru">Ru</option>
+                </select>      
+
 	<form onsubmit="saveCustomer(event)">
 <label>Ad</label><br>
 <input id="name"><br>
+<span id="name-error" style="color: red;"></span>
 
 <label>Soyad</label><br>
 <input id="surname"><br>
@@ -44,11 +52,35 @@ let customerName=document.getElementById('name').value;
 let customerSurname=document.getElementById('surname').value;
 let customerAge=document.getElementById('age').value;
 let customerObject={name:customerName,surname:customerSurname,age:Number(customerAge)};
+
 let json=JSON.stringify(customerObject);
 
 let http=new XMLHttpRequest();
 http.onload=function() {
-        loadCustomers();
+        let code=this.status;
+        if(status==200){
+            console.log('load');
+            loadCustomers();
+         }else{
+            problem(this);
+       }
+
+}
+function problem(http){
+console.log('error');
+let errors=JSON.parse(http.responseText);
+let nameError='';
+errors.forEach(e => {
+      let fieldName= e.split(':::::::')[0];
+      console.log(fieldName);
+      let fieldMessage= e.split(':::::')[1];
+      if(fieldName=='name'){
+           nameError+=fieldMessage+' ';
+}
+});
+
+document.getElementById('name-error').innerHTML=nameError;
+
 }
 
 http.open("POST","http://localhost:6606/customers",true);
@@ -111,6 +143,9 @@ http.send(json);
        http.open("GET","http://localhost:6606/customers/"+customerId,true);
        http.send();
      }
+        function onChangeLang(event){
+             alert(event.target.value);
+        }
 </script>
 </body>
 </html>
